--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@ video {
 	  But he started in <a href='https://www.youtube.com/watch?v=9gk_rl3y_SU'>2009 with a HP Pavillion review and a webcam.</a>
 	  These are all of his videos, in chronological order, for the first 10 seconds. You can
 	  see things start to develop: gestures, improvements in lighting and framing. Title
-	  cards get more compressed and perfected.
-	</p>
-	<p>
-	  I don’t know – it seems cool to me.
+	  cards get more compressed and perfected. It’s cool to see people mastering an art.
 	</p>
       </div>
       <section>
