--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@ video {
 	  see things start to develop: gestures, improvements in lighting and framing. Title
 	  cards get more compressed and perfected. It’s cool to see people mastering an art.
 	</p>
+	<p>
+	<i>In Chrome, you’ll have to click it to start playing, because bad websites
+	   abuse autoplaying which is why we can’t have nice things.</p>
       </div>
       <section>
-	<video autoplay mute loop><source src="output-total.mp4" type="video/mp4"></video>
+	<video autoplay mute loop controls><source src="output-total.mp4" type="video/mp4"></video>
       </section>
     </div>
   </body>
