--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ video {
 	   abuse autoplaying which is why we can’t have nice things.</p>
       </div>
       <section>
-	<video autoplay mute loop controls><source src="output-total.mp4" type="video/mp4"></video>
+	<video autoplay muted loop controls><source src="output-total.mp4" type="video/mp4"></video>
       </section>
     </div>
   </body>
